<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisteActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="109dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/wwiisseeremovebgpreview"/>

            <TextView
                android:id="@+id/banner"
                android:layout_width="200dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/register"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#055703" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/RStudentEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/RStudentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stdName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_name"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="42dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stdID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_id"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BackLogin"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                app:backgroundTint="#055703"
                app:cornerRadius="@dimen/fab_margin" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BackToLogin"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"

                android:gravity="center"
                android:onClick="BackLOG"
                android:text="@string/back_to_login"
                android:textColor="#FFFFFF"
                app:backgroundTint="#055703"
                app:cornerRadius="@dimen/fab_margin"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/fab_margin" />


        </LinearLayout>

    </ScrollView>



</LinearLayout>